由于SecurityManager改成java1.8 把Error补全 初始化SecurityMananger